cart.js fix color contrast

--- a/src/style/_cart.scss
+++ b/src/style/_cart.scss
@@ -73,7 +73,7 @@
             line-height: 1.5;
 
             a {
-                color: #ff7952;
+                color: #E03400;
                 text-decoration: none;
             }
         }
