--- a/src/style/general.css
+++ b/src/style/general.css
@@ -314,7 +314,7 @@ header .header--nav .header--nav--ul button .close {
   line-height: 1.5;
 }
 .cart--modal .empty--cart--text p a {
-  color: #ff7952;
+  color: #E03400;
   text-decoration: none;
 }
 .cart--modal .guarantee--container {
